# html_form_to_dict

./: setup.cfg
.github/workflows/: python-package.yml
html_form_to_dict/: __init__.py
html_form_to_dict/tests/: test_html_form_to_dict.py
