[metadata]
name = html_form_to_dict
version = 2025.3.28
description = Parse HTML to a Python Dictionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guettli/html_form_to_dict
author = Thomas Güttler
author_email = info.html_form_to_dict@thomas-guettler.de
classifiers =
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
        
[options]
python_requires = >=3.7
include_package_data = true
packages = find:
install_requires =
    lxml

[options.extras_require]
test =
    pytest

